# CellSium

./: .environment.yaml  .gitignore  .travis.yml  CITATION.cff  Dockerfile  Figure Generation.ipynb  LICENSE.rst  Makefile  README.md  README.rst  prepare.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker.yml  python-package.yml  python-test.yml
cellsium/: __init__.py  __main__.py  cli.py  parameters.py  random.py  typing.py
cellsium/cli/: __init__.py  cli.py
cellsium/cli/render/: __init__.py
cellsium/cli/simulate/: __init__.py
cellsium/cli/training/: __init__.py
cellsium/geometry/: __init__.py
cellsium/model/: __init__.py  agent.py  geometry.py  initialization.py
cellsium/output/: __init__.py  all.py  gt.py  mesh.py  plot.py  render.py  serialization.py  svg.py  xml.py
cellsium/simulation/: __init__.py  placement.py  simulator.py
cellsium/simulation/placement/: __init__.py  base.py  pybox2d.py  pymunk.py
cellsium/test/: __main__.py
cellsium/tests/: __init__.py  cell_test.py  cli_calls_test.py  conftest.py  doctest_test.py  generate_dxf_file.py  geometry_test.py  misc_test.py  output_test.py  simulator_test.py
docs/: Embedding.rst  conf.py  examples.rst  index.rst  license.rst  requirements.txt  square.py
docs/_ext/: automagicdoc.py
examples/: Embedding.ipynb
recipe/: meta.yaml
