[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "cellsium"
author = "Christian C. Sachs"
author-email = "c.sachs@fz-juelich.de"
home-page = "https://github.com/modsim/cellsium"
description-file = "README.md"
license = "BSD"
requires = [
    "numpy",
    "scipy",
    "matplotlib",
    "tunable",
    "jsonpickle",
    "tqdm",
    "pymunk",
    # "opencv",  # no proper way of requiring this pip-compatible
    "tifffile",
    "roifile",
    "numpy-stl",
    "ezdxf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"
multi_line_output = 3
