[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ["version"]
name = "cellsium"
authors = [
    {name = "Christian C. Sachs", email = "c.sachs@fz-juelich.de"},
]
description = "tunable manager"
readme = "README.md"
license = { file = "LICENSE.rst" }
urls = { Source = "https://github.com/modsim/cellsium" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.17",
    "scipy",
    "matplotlib",
    "tunable",
    "jsonpickle",
    "tqdm",
    "pymunk",
    # "opencv",  # no proper way of requiring this pip-compatible
    "tifffile",
    "roifile",
    "numpy-stl",
    "ezdxf",
]

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=cellsium -vv --durations=0"

[tool.flake8]
max-line-length = 88
exclude = "local"
extend-ignore = "E203,"
max-complexity = 10
