[metadata]
name = cellsium
version = attr: cellsium.__version__
# TODO change ... https://pypi.org/project/setuptools-scm/ ?
description = CellSium - _Cell_ _Si_mulator for _micro_fluidic _m_icrocolonies
long_description = file: README.md
author = Christian C. Sachs
author_email = c.sachs@fz-juelich.de
url = https://github.com/modsim/cellsium
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Recognition

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    tunable
    jsonpickle
    tqdm
    pymunk
    # opencv
    tifffile
    roifile
    numpy-stl
    ezdxf
